# zarrbench

./: pyproject.toml
.github/workflows/: build.yaml
src/zarrbench/: __main__.py  bench.py
